# cranks-renderer

./: .editorconfig  .gitmodules  CMakeLists.txt  readme.md
resource/shader/glsl/: triangle.vert
src/: events.cpp  events.h  gui_main.cpp  gui_main.h  main.cpp  pbr_app.h  pbr_ui.cpp  renderer_ui.cpp  renderer_ui.h  vulkan_buffer.h  vulkan_main.cpp  vulkan_main.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_tool.cpp  vulkan_ui.h
src/base/: efloat.h  events.cpp  events.h  json.h  memory.cpp  memory.h  priority_queue.h  thread.h
src/core/: api.cpp  api.h  app.cpp  app.h  bvh.cpp  bvh.h  camera.cpp  camera.h  error.cpp  error.h  film.cpp  film.h  geometry.h  integrator.cpp  integrator.h  interaction.cpp  interaction.h  kdtree.cpp  kdtree.h  light.cpp  light.h  material.cpp  material.h  medium.cpp  medium.h  microfacet.cpp  microfacet.h  mipmap.h  object.h  pbr.h  primitive.cpp  primitive.h  reflection.cpp  reflection.h  rng.cpp  rng.h  sampler.cpp  sampler.h  sampling.cpp  sampling.h  (+11 more)
src/integrator/: path.cpp  path.h  pm.cpp  pm.h  ppm.cpp  ppm.h  vpath.cpp  vpath.h  whitted.cpp  whitted.h
src/light/: infinite.cpp  infinite.h  point.cpp  point.h
src/shape/: sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/texture/: checkerboard.cpp  checkerboard.h
src/tool/: image.cpp  image.h  json.h  logger.cpp  logger.h  model.cpp  model.h
src/vulkan/: vulkan_buffer.cpp  vulkan_device.cpp  vulkan_device.h  vulkan_main.cpp  vulkan_main.h  vulkan_swapchain.cpp  vulkan_tool.cpp  vulkan_tool.h  vulkan_ui.cpp  vulkan_ui.h
